[RESTEASY-1724] Removing add-export not needed anymore